--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://freitasxandrei.github.io/newPortfolio/",
+  "homepage": "https://freitasxandrei.github.io/newPortfolio",
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
